:sparkles: 페이징 구현
Page<Post> findPageBy 사용하여 페이지별로 찾아올 수 있도록 구현하였습니다.

그리고 각 페이지에 대한 정보들을 타임리프로 전송하여 화면에 표시하였습니다.

--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -46,13 +46,21 @@
                 <div class="col-md-3"></div>
                 <div class="col-md-6 text-center">
                     <ul class="pagination center-block" style="display:inline-block;">
-                        <li><a href="#">«</a></li>
-                        <li><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li>
-                        <li><a href="#">»</a></li>
+                        <!-- 이전 페이지 묶음 버튼 -->
+                        <li th:if="${startPage > 1}">
+                            <a th:href="@{'/page/' + ${startPage - 1}}">«</a>
+                        </li>
+
+                        <!-- 페이지 번호 목록 -->
+                        <li th:each="i : ${#numbers.sequence(startPage, endPage)}"
+                            th:classappend="${i} == ${currentPage} ? 'active'">
+                            <a th:href="@{'/page/' + ${i}}" th:text="${i}">1</a>
+                        </li>
+
+                        <!-- 다음 페이지 묶음 버튼 -->
+                        <li th:if="${endPage < totalPages}">
+                            <a th:href="@{'/page/' + ${endPage + 1}}">»</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-3 qna-write">
@@ -142,8 +150,8 @@
 -->
 
 <!-- script references -->
-<script src="../../static/js/jquery-2.2.0.min.js"></script>
-<script src="../../static/js/bootstrap.min.js"></script>
-<script src="../../static/js/scripts.js"></script>
+<script src="/js/jquery-2.2.0.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/scripts.js"></script>
 	</body>
 </html>
