[MUD] step-5 권한 부여 (#57)
* Refactor: createUser() DB 조회 최소화

- loginId에 unique 속성을 추가하여 DB에서 중복 검사를 수행하고, 두 번의 DB 조회를 방지했습니다.

* Refactor: 특정 예외로 예외처리하도록 수정

- 기존 Exception으로 처리하던 예외처리를 특정 예외처리를 하도록 수정해 가독성을 높였습니다.

* Refactor: 로그인 사용자 세션 키를 상수로 변경

- "loginUserId"를 상수 SESSION_LOGIN_USER로 변경하여 코드의 가독성을 높였습니다.

* Refactor: 로그인 서비스 관심사 분리

- login -> authenticate으로 명칭 변경하고, 세션 관련 로직을 컨트롤러에 분리하여 서비스의 책임을 인증 로직에만 집중하도록 변경했습니다.

* style: 에러 메세지 변경

- 상세한 에러 메시지로 변경해 더 명확한 에러 상황을 전달하도록 했습니다.

* feat: Article에 User 외래키 지정

- 글 작성자를 정보를 등록하기 위해 User 외래키를 설정했습니다.

* refactor: 세션 조회 최소화

- 기존에 두 번의 세션 조회가 발생할 수 있는 상황을 방지했습니다.

* feat: 로그인한 사용자만 글을 조회할 수 있도록 구현

- 로그인하지 않는 사용자는 글 조회 시 로그인 화면으로 이동하도록 구현했습니다.

* refactor: 글 작성 엔드포인트 처리방식 변경

- 기존 GET /article/write 요청 시 view만 반환해주면 되어 WebMvcConfigurer를 통해 처리해줬습니다.
- 로그인 검증이 필요하여 검증 로직을 추가하고 ArticleController를 통해 처리되도록 변경했습니다.

* feat: 글 작성자 등록 로직 추가

- 글 작성시 회원의 닉네임을 저장하도록 구현했습니다.

* feat: 글 수정 페이지 이동 엔드포인트 추가

- GET /article/{id}/form 요청 시 글 수정 페이지를 반환합니다.
- 로그인 상태인지, 글 작성자와 로그인 유저가 동일한지 검증합니다.

* style: 화면 디자인 변경

- 전반적인 화면 디자인을 통일성있게 변경했습니다.

* feat: 글 수정 엔드포인트 추가

- POST /article/{id}/update 요청 시 글을 수정합니다.

* chore: gitignore 설정 추가

- data 폴더 제외 설정 추가했습니다.

* feat: 글 수정자 저장 로직 추가

- 글 수정시 수정자 이름을 저장하도록 구현했습니다.

* refactor: 회원가입 후 리다이렉트 경로 변경

- 회원가입 후 메인페이지로 이동하도록 변경했습니다.

* refactor: 글 수정 엔드포인트 HTTP 메소드 변경

- POST -> PUT으로 변경했습니다.

* feat: 글 삭제 엔드포인트 추가

- DELETE /article/{id}/delete 요청 시 글이 삭제되도록 처리했습니다.
- 로그인 상태, 글 삭제 권한이 있는 확인한 후 기능을 수행합니다.

* feat: 로그인 확인 Interceptor 구현

- interceptor를 활용해 로그인 상태를 확인을 하도록 구현했습니다.
- controller에 로그인 상태 확인 로직을 제거했습니다.

* style: html 및 css 변경

- 전체적인 디자인 수정했습니다.

* refactor: 로그인 상태 확인 로직 제거

- interceptor를 통해 로그인 상태를 확인하기 때문에 로그인 확인 로직을 제거했습니다.

* style: 글 상세페이지 디자인 변경

- 배경색을 하얀색으로 변경했습니다.

* refactor: ArticleController 비즈니스 로직 분리

- ArticleController 비즈니스 로직이 복잡하여 서비스 계층으로 분리했습니다.

* refactor: findByLoginId 메소드 제거

- 불필요하여 제거하였습니다.

* refactor: UserController와 UserService의 메서드명을 명확하게 변경



--- a/src/main/resources/templates/article/detail.html
+++ b/src/main/resources/templates/article/detail.html
@@ -2,28 +2,35 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{layouts/layout}">
 <head>
-    <title>글 작성</title>
+    <title>게시글 상세</title>
 </head>
 <body>
 <main layout:fragment="content">
-    <div class="container py-5" id="main">
-        <div class="row justify-content-center">
-            <div class="col-lg-8">
-                <div class="card shadow-sm border-0 rounded-3">
-                    <div class="card-header bg-primary text-white py-3">
-                    </div>
-                    <div class="card-body p-4">
-                        <form method="post" action="/article">
-                            <h2 th:text="${article.title}"></h2>
-
-                            <div class="mb-4">
-                                <textarea class="form-control" id="postContent" rows="10" name="content"
-                                          th:text="${article.content}" readonly></textarea>
-                            </div>
-                        </form>
-                    </div>
-                </div>
+    <div class="container mx-auto px-4 py-8 max-w-4xl">
+        <div class="post-header">
+            <h1 class="post-title" th:text="${article.title}">게시글 제목</h1>
+            <div class="post-meta">
+                <span>작성일</span>
+                <span>•</span>
+                <span>
+                    <p th:text="${article.user.name}"></p>
+                </span>
             </div>
+        </div>
+
+        <div class="post-content">
+            <textarea th:text="${article.content}" readonly></textarea>
+        </div>
+
+        <div class="flex justify-between mt-8">
+            <a th:href="@{/}" class="btn btn-secondary">목록으로</a>
+            <div class="space-x-4">
+                <a th:href="@{/article/{id}/form(id=${article.id})}" class="btn btn-primary">수정</a>
+            </div>
+            <form th:action="@{/article/{id}/delete(id=${article.id})}" method="post">
+                <input type="hidden" name="_method" value="DELETE"/>
+                <button type="submit" class="btn btn-primary">삭제</button>
+            </form>
         </div>
     </div>
 </main>
