[BRIE] Step5-2 게시글 권한 부여 (#59)
* refactor: User 엔티티에 생성자, User.form(UserForm form) 추가

* refactor: 불필요한 변수 제거

* refactor: 생성자 사용하도록 수정

* feat: 에러핸들러 적용

* refactor: 예외 상황 수정

* refactor: 로그인확인, 다른 사용자 확인 로직 분리
* 다른 사용자의 프로필을 확인하려할때 아예 로그인이 안되어있으면 -> 로그인으로
* 다른 사용자이면 -> list로

* refactor: 로그인하면 상단에 loginid 표시

* refactor: 기본 생성자 protected로 변경

* refactor: 간단한 코드 수정
* 기본 뷰 로직은 mvcconfig로

* chore: 주석 추가

* feat: userform(dto) 내부에 updateuser (내부 클래스) 추가

* refactor: 테스트 오류 수정
* 다른 사용자의 정보 수정하려 할 때 리다이럭트 users/list로

* refactor: board 엔티티 user 엔티티와 연관관계 설정

* refactor: 인증/인가 메서드 authutl 클래스로 분리

* refactor: 게시글 상세보기 (로그인 사용자만 접근 가능)

* refactor: 게시글 작성 처리

* refactor: 게시글 작성 처리

* refactor: 보드서비스 테스트 수정 ->  더미 User(dummyUser) 생성

* refactor: alert 창 header에 추가 -> 중복 제거

* refactor: 게시글 수정 - 로그인 사용자와 글쓴이가 같은 경우

* feat: 게시글 삭제

* feat: 보드 테스트코드 작성
* 실패했을때 테스트도 작성 필요

* refactor: html 수정

* refactor: Board 엔티티에 업데이트 전용 메서드를 추가
* setter 사용 안하기 위해

--- a/src/main/resources/templates/user/profile.html
+++ b/src/main/resources/templates/user/profile.html
@@ -16,10 +16,6 @@
     <th:block th:replace="~{layout/subnav :: subnav}"></th:block>
 
     <div class="container" id="main">
-        <!-- 에러 메시지 출력 -->
-        <script th:if="${errorMessage}">
-            alert('[[${errorMessage}]]');
-        </script>
 
         <div class="col-md-6 col-md-offset-3">
             <div class="panel panel-default">
@@ -28,7 +24,7 @@
                     <div class="well well-sm">
                         <div class="media">
                             <a class="thumbnail pull-left" href="#">
-                                <img class="media-object" src="../../static/images/80-text.png">
+                                <img class="media-object" src="/images/80-text.png">
                             </a>
                             <div class="media-body" th:if="${user != null}">
                                 <h4 class="media-heading" th:text="${user.name}">사용자 이름</h4>
