--- a/src/main/resources/templates/layout/header.html
+++ b/src/main/resources/templates/layout/header.html
@@ -1,6 +1,10 @@
 <div th:fragment="header">
     <nav class="navbar navbar-fixed-top header">
         <div class="col-md-12">
+            <!-- 에러 메시지 출력 -->
+            <script th:if="${errorMessage}">
+                alert('[[${errorMessage}]]');
+            </script>
             <div class="navbar-header">
                 <a th:href="@{/}" class="navbar-brand">SLiPP</a>
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse1">
@@ -18,6 +22,9 @@
                     </div>
                 </form>
                 <ul class="nav navbar-nav navbar-right">
+                    <li th:if="${session.user != null}">
+                        <a href="#">🤗 [[${session.user.name}]] 🤗</a>
+                    </li>
                     <li>
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-bell"></i></a>
                         <ul class="dropdown-menu">
