--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -28,7 +28,7 @@
                                      class="article-author-thumb" alt="">
                             </div>
                             <div class="article-header-text">
-                                <span class="article-author-name" th:text="${board.writer}">작성자</span>
+                                <span class="article-author-name" th:text="${board.writer.name}">작성자</span>
                                 <span class="article-header-time">방금 전</span>
                             </div>
                         </div>
@@ -38,12 +38,12 @@
                         <div class="article-util">
                             <ul class="article-util-list">
                                 <li>
-                                    <a class="link-modify-article" href="#">수정</a>
+                                    <a th:href="@{/boards/{boardId}/edit(boardId=${board.boardId})}" class="link-modify-article">수정</a>
                                 </li>
                                 <li>
-                                    <form class="form-delete" action="#" method="POST">
+                                    <form class="form-delete" method="post" th:action="@{/boards/{boardId}(boardId=${board.boardId})}">
                                         <input type="hidden" name="_method" value="DELETE">
-                                        <button class="link-delete-article" type="submit">삭제</button>
+                                        <button type="submit" class="link-delete-article">삭제</button>
                                     </form>
                                 </li>
                                 <li>
