[BAZZI] Step8 - 페이징 구현하기 (#60)
* :fire: 리펙토링을 위한 삭제

* :fire: 리펙토링을 위한 삭제

* :sparkles: user객체 재생성

seq라는 변수가 헷갈려서 변경하였습니다.

* :sparkles: user레포지토리 생성

jpa방식과, map방식을 interface로 묶었습니다.

* :sparkles: repo config생성

필요한 레포를 연결하도록 생성하였습니다.

* :sparkles: repo config생성

조회를 위해 init도 개발하였습니다.

* :memo: log파일 조회 기능 추가

* :sparkles: 사용자 요청, 응답 폼 추가

* :sparkles: 로직 분리

Controller에는 회원가입기능 추가하고, Service계층에는 초기화 해주는 로직, 모든 사용자를 반환하는 로직을 추가하였습니다.

그리고 dto에서 User Entity로 변환이 가능하도록 구현하였습니다.

* :recycles: 라벨 수정

* :truck: 파일 경로 이동

* :sparkles: 게시글 객체 완성

* :sparkles: repository 생성

jpa와 map 2가지 방법을 사용하였습니다.

* :sparkles: service 생성

테스트를 위해 user를 추가해서 넣어봤습니다.
확인해보니 여기서 추가한 객체가 1번으로 들어왔습니다.(테스트용으로 만든 유저 2개[ userService에 위치]는 뒤로 들어왔습니다.)

* :sparkles: 컨트롤러 생성

우선 루트경로의 post 화면만 구현하였습니다.

* :sparkles: 로그인 구현

로그인을 구현하였고, 우선 로그인에 대한 예외는 사용자가 잘못 입력한 경우일 수 있으므로 null을 던졌고, find by id일 때는 시스템 흐름상 DB에 없다면 흐름이 깨지므로 throw를 던졌습니다.

또한 controller에서 비밀번호를 제외한 responseDto를 전송해주는데 유저 리스트부분에서 for문으로 각각 옮겨서 전송해야하는 부분이 조금 애매합니다.

* :memo: 각종 폼 양식 리펙토링

* :sparkles: 예외처리 핸들러 추가

우선 GPT를 보고 만들었고 미완성입니다!
 잘못된 인자(입력값)를 메서드에 넣었을 때 던지는 예외처리를 넣어줬고, 잘못 입력이 들어올 때마다 해당 메세지를 폼에서 뜨도록 구현하려고 합니다.

* :sparkles: post DTO생성

* :sparkles: 포스트 조회를 위해 수정

포스트 리스트에 나오는게 name그리고, 이름을 눌렀을때 user의 id로 들어가서 프로필을 조회해야하므로 추가하였습니다.

* :sparkles: my sql 의존성 추가

의존성 추가 및 추가 및 sql쿼리 추가

* :memo: html파일 수정

다이렉팅 url 변경 및 error.html 생성
restController가 아닌 기본 controller에는 굳이 핸들러 사용이 필요 없을 것 같음

* :sparkles: 게시글 삭제, 수정기능 추가

* :sparkles: user 개인정보 변경 및 비밀번호 수정 로직 추가

* :sparkles: 로그인 interceptor 구현

수정필요

* :sparkles: comment 객체 생성

* :sparkles: comment 기능 구현 완료

* :recycles: js파일 절대경로로 수정

* :sparkles: 페이징 구현

Page<Post> findPageBy 사용하여 페이지별로 찾아올 수 있도록 구현하였습니다.

그리고 각 페이지에 대한 정보들을 타임리프로 전송하여 화면에 표시하였습니다.

* :sparkles: 댓글 "더보기" 구현

* Remove application.properties from tracking

* :sparkles: 배포스크립트,

* :truck: 파일 이동

--- a/src/main/resources/templates/user/index.html
+++ b/src/main/resources/templates/user/index.html
@@ -16,12 +16,14 @@
 
 <div th:replace="~{fragments/navbar :: navbar}"></div>
 
+<div th:if="${message}" th:text="${message}" style="color:red;"></div>
+
 <div class="container" id="main">
     <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
         <div class="alert alert-danger" role="alert" th:if="${loginError}" th:text="${loginError}"></div>
         <div class="panel panel-default qna-list">
             <ul class="list">
-                <li th:each="board, stat : ${boards}">
+                <li th:each="board, stat : ${posts}">
                     <div class="wrap">
                         <div class="main">
                             <strong class="subject">
@@ -29,7 +31,7 @@
                             </strong>
                             <div class="auth-info">
                                 <i class="icon-add-comment"></i>
-                                <span class="time" th:text="${board.uploadDate}"></span>
+                                <span class="time" th:text="${board.date}"></span>
                                 <a th:href="@{/users/{id}(id=${board.writerId})}" class="author" th:text="${board.writerName}"></a>
                             </div>
                             <div class="reply" title="댓글">
@@ -44,13 +46,21 @@
                 <div class="col-md-3"></div>
                 <div class="col-md-6 text-center">
                     <ul class="pagination center-block" style="display:inline-block;">
-                        <li><a href="#">«</a></li>
-                        <li><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">5</a></li>
-                        <li><a href="#">»</a></li>
+                        <!-- 이전 페이지 묶음 버튼 -->
+                        <li th:if="${startPage > 1}">
+                            <a th:href="@{'/page/' + ${startPage - 1}}">«</a>
+                        </li>
+
+                        <!-- 페이지 번호 목록 -->
+                        <li th:each="i : ${#numbers.sequence(startPage, endPage)}"
+                            th:classappend="${i} == ${currentPage} ? 'active'">
+                            <a th:href="@{'/page/' + ${i}}" th:text="${i}">1</a>
+                        </li>
+
+                        <!-- 다음 페이지 묶음 버튼 -->
+                        <li th:if="${endPage < totalPages}">
+                            <a th:href="@{'/page/' + ${endPage + 1}}">»</a>
+                        </li>
                     </ul>
                 </div>
                 <div class="col-md-3 qna-write">
@@ -140,8 +150,8 @@
 -->
 
 <!-- script references -->
-<script src="../../static/js/jquery-2.2.0.min.js"></script>
-<script src="../../static/js/bootstrap.min.js"></script>
-<script src="../../static/js/scripts.js"></script>
+<script src="/js/jquery-2.2.0.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/scripts.js"></script>
 	</body>
 </html>
