--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -3,7 +3,7 @@
   <nav class="navbar navbar-fixed-top header">
     <div class="col-md-12">
       <div class="navbar-header">
-        <a href="/" class="navbar-brand">SLiPP</a>
+        <a href="/" class="navbar-brand">Codestagram</a>
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse1">
           <i class="glyphicon glyphicon-search"></i>
         </button>
@@ -28,7 +28,7 @@
             </ul>
           </li>
           <li th:if="${session.loginUser != null}">
-            <a th:href="@{/users/{id}(id=${session.loginUser.id})}">
+            <a href="/users" role="button">
               <i class="glyphicon glyphicon-user"></i>
             </a>
           </li>
@@ -66,14 +66,14 @@
             <a th:href="@{/users/login}" role="button">로그인</a>
           </li>
           <li th:if="${session.loginUser == null}">
-            <a th:href="@{/users/create}" role="button">회원가입</a>
+            <a th:href="@{/users/signup}" role="button">회원가입</a>
           </li>
 
           <li th:if="${session.loginUser != null}">
             <a th:href="@{/users/logout}" role="button">로그아웃</a>
           </li>
           <li th:if="${session.loginUser != null}">
-            <a href="/users" role="button">개인정보수정</a>
+            <a th:href="@{/users/{id}(id=${session.loginUser.id})}" role="button">개인정보수정</a>
           </li>
         </ul>
       </div>
