--- a/src/main/resources/templates/user/list.html
+++ b/src/main/resources/templates/user/list.html
@@ -6,12 +6,44 @@
     <title>SLiPP Java Web Programming</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!--[if lt IE 9]>
-    <script src="//html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="../html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
     <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
     <link th:href="@{/css/styles.css}" rel="stylesheet">
 </head>
 <body>
+<nav class="navbar navbar-fixed-top header">
+    <div class="col-md-12">
+        <div class="navbar-header">
+
+            <a href="../index.html" class="navbar-brand">SLiPP</a>
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-collapse1">
+                <i class="glyphicon glyphicon-search"></i>
+            </button>
+
+        </div>
+        <div class="collapse navbar-collapse" id="navbar-collapse1">
+            <form class="navbar-form pull-left">
+                <div class="input-group" style="max-width:470px;">
+                    <input type="text" class="form-control" placeholder="Search" name="srch-term" id="srch-term">
+                    <div class="input-group-btn">
+                        <button class="btn btn-default btn-primary" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+                    </div>
+                </div>
+            </form>
+            <ul class="nav navbar-nav navbar-right">
+                <li>
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="glyphicon glyphicon-bell"></i></a>
+                    <ul class="dropdown-menu">
+                        <li><a href="https://slipp.net" target="_blank">SLiPP</a></li>
+                        <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
+                    </ul>
+                </li>
+                <li><a href="../user/list.html"><i class="glyphicon glyphicon-user"></i></a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
 
 <div th:replace="~{fragments/navbar :: navbar}"></div>
 
@@ -27,14 +59,9 @@
                 <tbody>
                 <tr th:each="user, stat : ${users}">
                     <th scope="row" th:text="${stat.index + 1}"></th>
-                    <td><a th:href="@{/users/{id}(id=${user.id})}" th:text="${user.id}"></a></td>
+                    <td><a th:href="@{/users/{id}(id=${user.id})}" th:text="${user.userid}"></a></td>
                     <td th:text="${user.name}"></td>
                     <td th:text="${user.email}"></td>
-                    <td>
-                        <a th:if="${session.loginUser != null and session.loginUser.id == user.id}"
-                           th:href="@{/users/{id}/revise(id=${user.id})}"
-                           class="btn btn-success" role="button">수정</a>
-                    </td>
                 </tr>
                 </tbody>
             </table>
@@ -43,8 +70,8 @@
 </div>
 
 <!-- script references -->
-<script src="../js/jquery-2.2.0.min.js"></script>
-<script src="../js/bootstrap.min.js"></script>
-<script src="../js/scripts.js"></script>
+<script src="/js/jquery-2.2.0.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/scripts.js"></script>
 </body>
 </html>
