--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -19,8 +19,8 @@
             <div class="alert alert-danger" role="alert" th:if="${loginError}" th:text="${loginError}"></div>
             <form name="loginForm" method="post" action="/users/login">
                 <div class="form-group">
-                    <label for="id">사용자 아이디</label>
-                    <input class="form-control" id="id" name="id" placeholder="User ID">
+                    <label for="userid">사용자 아이디</label>
+                    <input class="form-control" id="userid" name="userid" placeholder="User ID">
                 </div>
                 <div class="form-group">
                     <label for="password">비밀번호</label>
@@ -32,8 +32,8 @@
     </div>
 </div>
 
-<script src="../../static/js/jquery-2.2.0.min.js"></script>
-<script src="../../static/js/bootstrap.min.js"></script>
-<script src="../../static/js/scripts.js"></script>
+<script src="/js/jquery-2.2.0.min.js"></script>
+<script src="/js/bootstrap.min.js"></script>
+<script src="/js/scripts.js"></script>
 </body>
 </html>
