Refactor: 커스텀 예외 생성과 ControllerAdvice 추가에 대한 리팩토링

--- a/src/main/resources/templates/error.html
+++ b/src/main/resources/templates/error.html
@@ -1,32 +1,31 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-
-<!-- 공통 헤더 사용 -->
-<head th:replace="~{fragments :: head('오류')}"></head>
-
+<head th:replace="~{fragments :: head('오류 발생')}"></head>
 <body>
-<!-- 공통 상단 내비게이션 바 사용 -->
 <nav th:replace="~{fragments :: navbar}"></nav>
-
-<!-- 공통 서브 내비게이션 바 사용 -->
 <div th:replace="~{fragments :: subnav}"></div>
 
 <div class="container" id="main">
-    <div class="col-md-6 col-md-offset-3">
-        <div class="panel panel-default content-main">
-            <div class="alert alert-danger" role="alert">
-                <h4 class="alert-heading">오류가 발생했습니다!</h4>
-                <p th:text="${errorMessage}">오류 메시지</p>
-                <hr>
-                <p class="mb-0">
-                    <a href="/" class="btn btn-primary">홈으로 돌아가기</a>
-                </p>
+    <div class="col-md-8 col-md-offset-2">
+        <div class="panel panel-danger">
+            <div class="panel-heading">
+                <h3 class="panel-title" th:text="${error.statusCode + ' 오류'}">오류 발생</h3>
+            </div>
+            <div class="panel-body">
+                <div class="alert alert-danger">
+                    <h4><i class="glyphicon glyphicon-exclamation-sign"></i> 문제가 발생했습니다</h4>
+                    <p th:text="${error.message}">오류 메시지</p>
+                    <small th:text="${#temporals.format(error.timestamp, 'yyyy-MM-dd HH:mm:ss')}">시간</small>
+                </div>
+                <div class="text-center mt-4">
+                    <a href="/" class="btn btn-primary">메인으로 돌아가기</a>
+                    <button onclick="history.back()" class="btn btn-default">이전 페이지로</button>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
-<!-- 공통 스크립트 사용 -->
 <div th:replace="~{fragments :: scripts}"></div>
 </body>
 </html>
