feat : Article 테이블을 User 테이블의 PK를 외래키로 지정하고 writer 타입 User로 변경 및 리펙토링

--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -99,7 +99,7 @@
                           <img src="https://graph.facebook.com/v2.3/100000059371774/picture" class="article-author-thumb" alt="">
                       </div>
                       <div class="article-header-text">
-                          <a href="/users/92/kimmunsu" class="article-author-name" th:text="${article.writer}" >kimmunsu</a>
+                          <a href="/users/92/kimmunsu" class="article-author-name" th:text="${article.writer.name}" >kimmunsu</a>
                           <a href="/questions/413" class="article-header-time" title="퍼머링크">
                               2015-12-30 01:47
                               <i class="icon-link"></i>
@@ -113,7 +113,7 @@
                   <div class="article-util">
                       <ul class="article-util-list">
                           <li>
-                              <a class="link-modify-article"  th:href="@{/articles/{id}/updateForm(id=${article.id})}">
+                              <a class="link-modify-article"  th:href="@{/articles/{articleId}/updateForm(articleId=${article.articleId})}">
                                   수정</a>
                           </li>
                           <li>
