--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -87,12 +87,12 @@
                     <div class="wrap">
                         <div class="main">
                             <strong class="subject">
-                                <a th:href="@{/articles/{id}(id=${article.id})}" th:text="${article.title}">제목</a>
+                                <a th:href="@{/articles/{articleId}(articleId=${article.articleId})}" th:text="${article.title}">제목</a>
                             </strong>
                             <div class="auth-info">
                                 <i class="icon-add-comment"></i>
-                                <span class="time" th:text="${article.id}">ID</span>
-                                <span class="time" th:text="${article.writer}">작성자</span>
+                                <span class="time" th:text="${article.articleId}">ID</span>
+                                <span class="time" th:text="${article.writer.userId}">작성자</span>
                             </div>
                         </div>
                     </div>
