--- a/src/main/resources/templates/qna/form.html
+++ b/src/main/resources/templates/qna/form.html
@@ -76,26 +76,19 @@
 <div class="container" id="main">
    <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
       <div class="panel panel-default content-main">
-          <form name="question" method="post" th:action="@{/articles}">
+          <form th:object="${article}" name="question" method="post" th:action="@{/articles}">
 
-              <!-- 로그인 사용자 이름을 자동으로 저장 -->
-              <input type="hidden" id="writer" name="writer" th:value="${session.user != null ? session.user.name : ''}" />
-              <!--
-              <div class="form-group">
-                  <label for="writer">글쓴이</label>
-                  <input class="form-control" id="writer" name="writer" placeholder="글쓴이"/>
-              </div>
-               -->
-
+              <!-- 로그인 사용자 ID를 자동으로 저장 -->
+              <input type="hidden" id="writerId" name="writerId" th:value="${session.user.id}" />
               <div class="form-group">
                   <label for="title">제목</label>
-                  <input type="text" class="form-control" id="title" name="title" placeholder="제목"/>
+                  <input type="text" class="form-control" id="title" name="title"   th:field="*{title}" placeholder="제목" />
               </div>
               <div class="form-group">
                   <label for="contents">내용</label>
-                  <textarea name="contents" id="contents" rows="5" class="form-control" ></textarea>
+                  <textarea name="contents" id="contents" rows="5" class="form-control" th:field="*{contents}" required></textarea>
               </div>
-              <button type="submit" class="btn btn-success clearfix pull-right">질문하기</button>
+              <button type="submit" class="btn btn-success clearfix pull-right">저장하기</button>
               <div class="clearfix" />
           </form>
         </div>
