--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -130,7 +130,7 @@
 <!-- script references -->
 {{> partials/footer}}
 
-<!--ajax-->
+<!--댓글 작성-->
 <script>
     $(function () {
         $('.submit-write').on('submit', function (e) {
@@ -168,6 +168,38 @@
                             ${err.message}
                         </div>
                     `;
+                    $('#errorContainer').html(html);
+                }
+            });
+        });
+    });
+</script>
+
+<!-- 댓글 삭제 -->
+<script>
+    $(function () {
+        $(document).on('click', '.delete-answer-button', function (e) {
+            e.preventDefault();
+
+            const form = $(this).closest('form');
+            const url = form.attr('action');
+            const answerElement = $(this).closest('article.article');
+
+            $.ajax({
+                type: 'DELETE',
+                url: url,
+                success: function () {
+                    $('#errorContainer').empty();
+                    answerElement.remove();       // ✅ 댓글 DOM 제거
+                },
+                error: function (xhr) {
+                    const err = JSON.parse(xhr.responseText);
+                    const html = `
+                    <div class="alert alert-danger" role="alert">
+                        <strong>[${xhr.status}]</strong><br>
+                        ${err.message}
+                    </div>
+                `;
                     $('#errorContainer').html(html);
                 }
             });
