--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -49,7 +49,7 @@
 
               <div class="qna-comment">
                   <div class="qna-comment-slipp">
-                      <p class="qna-comment-count"><strong>{{replyCount}}</strong>개의 의견</p>
+                      <p class="qna-comment-count"><strong id="replyCount">{{replyCount}}</strong>개의 의견</p>
                       <div class="qna-comment-slipp-articles" id="answer-list">
                          {{#replyDtoList}}
                           <article class="article" id="answer-1405">
@@ -117,7 +117,7 @@
 				<a class="link-modify-article" href="/api/qna/updateAnswer/{3}">수정</a>
 			</li>
 			<li>
-				<form class="delete-answer-form" action="/api/questions/{3}/answers/{4}" method="POST">
+				<form class="delete-answer-form" action="/articles/{3}/answers/{4}" method="POST">
 					<input type="hidden" name="_method" value="DELETE">
                      <button type="submit" class="delete-answer-button">삭제</button>
 				</form>
@@ -126,7 +126,6 @@
 		</div>
 	</article>
 </script>
-
 <!-- script references -->
 {{> partials/footer}}
 
@@ -155,10 +154,14 @@
                         .replaceAll("{0}", response.name)
                         .replaceAll("{1}", response.createdAt)
                         .replaceAll("{2}", response.text)
-                        .replaceAll("{3}", response.questionId)
-                        .replaceAll("{4}", response.answerId);
+                        .replaceAll("{3}", response.articleId)
+                        .replaceAll("{4}", response.replyId);
 
                     $('#answer-list').append(filled); // 필요한 경우 답변 목록 갱신
+
+                    const countElement = $('#replyCount');
+                    const current = parseInt(countElement.text());
+                    countElement.text(current + 1);
                 },
                 error: function (xhr) {
                     const err = JSON.parse(xhr.responseText);
@@ -191,6 +194,10 @@
                 success: function () {
                     $('#errorContainer').empty();
                     answerElement.remove();       // ✅ 댓글 DOM 제거
+
+                    const countElement = $('#replyCount');
+                    const current = parseInt(countElement.text());
+                    countElement.text(current - 1);
                 },
                 error: function (xhr) {
                     const err = JSON.parse(xhr.responseText);
